# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add splashimage= line to grub.conf if /boot/grub/splash.xpm.gz exists

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/generic_stage_template.spec, examples/grp_template.spec,
  examples/livecd-stage1_template.spec,
  examples/livecd-stage2_template.spec, examples/netboot_template.spec,
  examples/stage4_template.spec, examples/tinderbox_template.spec:
  Changing link so it no longer points to a dead page.  This is for bug #208609.

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/snapshot_target.py:
  Add .svn to the catalyst snapshot excludes and remove old pordir_overlay code.

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage1/stage1-chroot.sh:
  As much as I hate this, we're going to force baselayout to install first.
  This will keep us from having any issues with packages that don't respect
  multilib libdirs.

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf:
  Reorder options in catalyst.conf so they're alphabetical.

  02 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/bootloader-setup.sh:
  Add 'pager on' to grub.conf for bug 208531

  02 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/README.txt, livecd/files/x86-F6.msg:
  Removing the unused kernel command line options from Volume/Device Management.

  10 Jan 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is now 2.0.5 for release.

  25 Nov 2007; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf, modules/catalyst_support.py,
  modules/generic_stage_target.py,
  targets/embedded/embedded-preclean-chroot.sh,
  targets/grp/grp-preclean-chroot.sh,
  targets/livecd-stage1/livecd-stage1-preclean-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh,