@@ -26,7 +26,7 @@ clst_root_path=/ setup_portage
 
 run_emerge "--oneshot --nodeps virtual/baselayout"
 
-run_emerge "--noreplace --oneshot ${clst_buildpkgs}"
+USE="bindist" run_emerge "--noreplace --oneshot ${clst_buildpkgs}"
 rm -f /var/lib/portage/world
 touch /var/lib/portage/world
 
