@@ -1,6 +1,14 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  04 Feb 2008; Chris Gianelloni <wolf31o2@gentoo.org>
+  modules/generic_stage_target.py, modules/livecd_stage1_target.py,
+  targets/stage1/stage1-chroot.sh, targets/support/chroot-functions.sh:
+  Added USE=bindist automatically to everything that inherits set_use from
+  generic_stage_target, added USE=bindist to livecd_stage1_target, added
+  USE=bindist to emerge run for stage1, and did some minor cleanup in
+  get_libdir in chroot-functions.
+
   03 Feb 2008; Andrew Gaffney <agaffney@gentoo.org>
   targets/support/bootloader-setup.sh:
   Add splashimage= line to grub.conf if /boot/grub/splash.xpm.gz exists
